lessons/argo/kube/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "argo.reddtsai.org"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "argo.reddtsai.org"
      tls:
        credentialName: argo-ca-secret
        mode: SIMPLE

---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: argocd-virtualservice
spec:
  hosts:
    - "argo.reddtsai.org"
  gateways:
    - argocd-gateway
  http:
    - match:
        - uri:
            prefix: /argocd
      route:
        - destination:
            host: argocd-server
            port:
              number: 80
